fix: text visibility in dark mode

--- a/.vitepress/theme/style.css
+++ b/.vitepress/theme/style.css
@@ -3,5 +3,5 @@
 @tailwind utilities;
 
 .tag {
-    @apply mr-1 inline rounded-md bg-gray-100 px-2.5 py-1 text-center text-xs mb-1;
+    @apply mr-1 inline rounded-md bg-gray-100 px-2.5 py-1 text-center text-xs mb-1 dark:text-gray-500;
 }
